# mcpinspector

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: commands.rs  config.rs  display.rs  lib.rs  main.rs  repl.rs
src/protocol/: client.rs  mod.rs
src/transport/: http.rs  mod.rs  stdio.rs
tests/: client_mock.rs
tests/helpers/: mod.rs
