[package]
name = "mcpi"
version = "0.1.4"
edition = "2021"
description = "A command-line tool REPL for inspecting MCP servers"
license = "MIT"
repository = "https://github.com/oshea00/mcpinspector"
keywords = ["mcp", "inspector", "repl", "cli", "llm"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[dependencies]
clap         = { version = "4", features = ["derive"] }
rustyline    = { version = "14", features = ["with-file-history", "derive"] }
tokio        = { version = "1", features = ["full"] }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
reqwest      = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
anyhow       = "1"
colored      = "2"
comfy-table  = "7"
uuid         = { version = "1", features = ["v4"] }
futures      = "0.3"
tokio-util   = { version = "0.7", features = ["codec"] }
bytes        = "1"
shell-words  = "1"
dirs         = "5"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
